# semtech-pico-hal

./: CMakeLists.txt  Makefile
src/boards/: board.c  gpio-board.c
